--- a/ansible/install_applications/roles/dev_gitea_deploy/app/deploy/gitea-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/dev_gitea_deploy/app/deploy/gitea-statefulSet.yaml.j2
@@ -220,7 +220,7 @@ spec:
       storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
       resources:
         requests:
-          storage: 256M
+          storage: {{ gitea.container.storage.data }}
       selector:
         matchLabels:
           {{ gitea.labels_def | to_nice_yaml() | indent(10) }}
