--- a/ansible/install_applications/roles/download_deluge_deploy/app/deploy/persistentVolumeClaim.yaml.j2
+++ b/ansible/install_applications/roles/download_deluge_deploy/app/deploy/persistentVolumeClaim.yaml.j2
@@ -11,7 +11,7 @@ spec:
   storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
   resources:
     requests:
-      storage: 256M
+      storage: {{ deluge.container.storage.data }}
   selector:
     matchLabels:
       {{ deluge.labels_def | to_nice_yaml() | indent(10) }}
