--- a/ansible/install_applications/roles/home_homeassistant_deploy/app/deploy/homeassistant-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/home_homeassistant_deploy/app/deploy/homeassistant-statefulSet.yaml.j2
@@ -130,7 +130,7 @@ spec:
       storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
       resources:
         requests:
-          storage: 256M
+          storage: {{ homeassistant.container.storage.data }}
       selector:
         matchLabels:
           {{ homeassistant.labels_def | to_nice_yaml() | indent(10) }}
