--- a/ansible/install_applications/roles/infra_zonemta_deploy/app/deploy/mongdb-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra_zonemta_deploy/app/deploy/mongdb-statefulSet.yaml.j2
@@ -113,7 +113,7 @@ spec:
       storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
       resources:
         requests:
-          storage: 512M
+          storage: {{ zonemta_mongo.container.storage.data }}
       selector:
         matchLabels:
           {{ zonemta_mongo.labels_def | to_nice_yaml() | indent(10) }}
