--- a/ansible/install_applications/roles/logging_kibana_deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/logging_kibana_deploy/app/deploy/statefulSet.yaml.j2
@@ -110,7 +110,7 @@ spec:
       storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
       resources:
         requests:
-          storage: 64M
+          storage: {{ kibana.container.storage.data }}
       selector:
         matchLabels:
           {{ kibana.labels_def | to_nice_yaml() | indent(10) }}
