--- a/ansible/install_applications/roles/monitoring_grafana_deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_grafana_deploy/app/deploy/statefulSet.yaml.j2
@@ -131,7 +131,7 @@ spec:
       storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
       resources:
         requests:
-          storage: 128M
+          storage: {{ grafana.container.storage.data }}
       selector:
         matchLabels:
           {{ grafana.labels_def | to_nice_yaml() | indent(10) }}
