--- a/ansible/install_applications/roles/stream_airsonic_deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/stream_airsonic_deploy/app/deploy/statefulSet.yaml.j2
@@ -149,7 +149,7 @@ spec:
       storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
       resources:
         requests:
-          storage: 256M
+          storage: {{ airsonic.container.storage.data }}
       selector:
         matchLabels:
           {{ airsonic.labels_def | to_nice_yaml() | indent(10) }}
@@ -161,7 +161,7 @@ spec:
       storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
       resources:
         requests:
-          storage: 256M
+          storage: {{ airsonic.container.storage.playlists }}
       selector:
         matchLabels:
           {{ airsonic.labels_def | to_nice_yaml() | indent(10) }}
