--- a/ansible/install_applications/roles/tool_nextcloud_deploy/app/deploy/mysql-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/tool_nextcloud_deploy/app/deploy/mysql-statefulSet.yaml.j2
@@ -107,7 +107,7 @@ spec:
       storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
       resources:
         requests:
-          storage: 256M
+          storage: {{ nextcloud_mysql.container.storage.data }}
       selector:
         matchLabels:
           {{ nextcloud_mysql.labels_def | to_nice_yaml() | indent(10) }}
