--- a/ansible/install_applications/roles/tool_paperless_deploy/app/deploy/paperless-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/tool_paperless_deploy/app/deploy/paperless-statefulSet.yaml.j2
@@ -187,7 +187,7 @@ spec:
       storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
       resources:
         requests:
-          storage: 128M
+          storage: {{ paperless.container.storage.data }}
       selector:
         matchLabels:
           {{ paperless.labels_def | to_nice_yaml() | indent(10) }}
