--- a/ansible/install_applications/roles/auth_lemonldap_deploy/app/deploy/statefulset.yaml.j2
+++ b/ansible/install_applications/roles/auth_lemonldap_deploy/app/deploy/statefulset.yaml.j2
@@ -108,7 +108,7 @@ spec:
       storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
       resources:
         requests:
-          storage: 32M
+          storage: {{ lemonldap.container.storage.data }}
       selector:
         matchLabels:
           {{ lemonldap.labels_def | to_nice_yaml() | indent(10) }}
