--- a/ansible/install_applications/roles/dev_gitea_deploy/app/deploy/pgsql-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/dev_gitea_deploy/app/deploy/pgsql-statefulSet.yaml.j2
@@ -96,7 +96,7 @@ spec:
       storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
       resources:
         requests:
-          storage: 512M
+          storage: {{ gitea_pgsql.container.storage.data }}
       selector:
         matchLabels:
           {{ gitea_pgsql.labels_def | to_nice_yaml() | indent(10) }}
