--- a/ansible/install_applications/roles/download_sabnzbd_deploy/app/deploy/statefulset.yaml.j2
+++ b/ansible/install_applications/roles/download_sabnzbd_deploy/app/deploy/statefulset.yaml.j2
@@ -91,7 +91,7 @@ spec:
       storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
       resources:
         requests:
-          storage: 32M
+          storage: {{ sabnzbd.container.storage.config }}
       selector:
         matchLabels:
           {{ sabnzbd.labels_def | to_nice_yaml() | indent(10) }}
