--- a/ansible/install_applications/roles/home_esphome_deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/home_esphome_deploy/app/deploy/statefulSet.yaml.j2
@@ -85,7 +85,7 @@ spec:
       storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
       resources:
         requests:
-          storage: 128M
+          storage: {{ esphome.container.storage.config }}
       selector:
         matchLabels:
           {{ esphome.labels_def | to_nice_yaml() | indent(10) }}
