--- a/ansible/install_applications/roles/home_frigate_deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/home_frigate_deploy/app/deploy/statefulSet.yaml.j2
@@ -133,7 +133,7 @@ spec:
       storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
       resources:
         requests:
-          storage: 32M
+          storage: {{ frigate.container.storage.config }}
       selector:
         matchLabels:
           {{ frigate.labels_def | to_nice_yaml() | indent(10) }}
