--- a/ansible/install_applications/roles/home_homeassistant_deploy/app/deploy/mysql-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/home_homeassistant_deploy/app/deploy/mysql-statefulSet.yaml.j2
@@ -103,7 +103,7 @@ spec:
       storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
       resources:
         requests:
-          storage: 2G
+          storage: {{ homeassistant_mysql.container.storage.data }}
       selector:
         matchLabels:
           {{ homeassistant_mysql.labels_def | to_nice_yaml() | indent(10) }}
