--- a/ansible/install_applications/roles/home_mosquitto_deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/home_mosquitto_deploy/app/deploy/statefulSet.yaml.j2
@@ -96,7 +96,7 @@ spec:
       storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
       resources:
         requests:
-          storage: 128M
+          storage: {{ mosquitto.container.storage.data }}
       selector:
         matchLabels:
           {{ mosquitto.labels_def | to_nice_yaml() | indent(10) }}
