--- a/ansible/install_applications/roles/home_nodered_deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/home_nodered_deploy/app/deploy/statefulSet.yaml.j2
@@ -106,7 +106,7 @@ spec:
       storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
       resources:
         requests:
-          storage: 128M
+          storage: {{ nodered.container.storage.data }}
       selector:
         matchLabels:
           {{ nodered.labels_def | to_nice_yaml() | indent(10) }}
