--- a/ansible/install_applications/roles/home_zigbee2mqtt_deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/home_zigbee2mqtt_deploy/app/deploy/statefulSet.yaml.j2
@@ -124,7 +124,7 @@ spec:
       storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
       resources:
         requests:
-          storage: 32M
+          storage: {{ zigbee2mqtt.container.storage.data }}
       selector:
         matchLabels:
           {{ zigbee2mqtt.labels_def | to_nice_yaml() | indent(10) }}
