--- a/ansible/install_applications/roles/infra_blocky_deploy/app/deploy/redis-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra_blocky_deploy/app/deploy/redis-statefulSet.yaml.j2
@@ -106,7 +106,7 @@ spec:
       storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
       resources:
         requests:
-          storage: 32M
+          storage: {{ blocky_redis.container.storage.data }}
       selector:
         matchLabels:
           {{ blocky_redis.labels_def | to_nice_yaml() | indent(10) }}
