--- a/ansible/install_applications/roles/infra_gotify_deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra_gotify_deploy/app/deploy/statefulSet.yaml.j2
@@ -94,7 +94,7 @@ spec:
       storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
       resources:
         requests:
-          storage: 256M
+          storage: {{ gotify.container.storage.data }}
       selector:
         matchLabels:
           {{ gotify.labels_def | to_nice_yaml() | indent(10) }}
