--- a/ansible/install_applications/roles/infra_unifi_deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra_unifi_deploy/app/deploy/statefulSet.yaml.j2
@@ -136,7 +136,7 @@ spec:
       storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
       resources:
         requests:
-          storage: 1G
+          storage: {{ unifi.container.storage.data }}
       selector:
         matchLabels:
           {{ unifi.labels_def | to_nice_yaml() | indent(10) }}
