--- a/ansible/install_applications/roles/infra_zonemta_deploy/app/deploy/redis-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra_zonemta_deploy/app/deploy/redis-statefulSet.yaml.j2
@@ -94,7 +94,7 @@ spec:
       storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
       resources:
         requests:
-          storage: 32M
+          storage: {{ zonemta_redis.container.storage.data }}
       selector:
         matchLabels:
           {{ zonemta_redis.labels_def | to_nice_yaml() | indent(10) }}
