--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/alertmanager/alertmanager.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/alertmanager/alertmanager.yaml.j2
@@ -61,7 +61,7 @@ spec:
         storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
         resources:
           requests:
-            storage: 16M
+            storage: {{ alertmanager.container.storage.data }}
         selector:
           matchLabels:
             {{ alertmanager.labels_def | to_nice_yaml() | indent(4) }}
