--- a/ansible/install_applications/roles/stream_jellyfin_deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/stream_jellyfin_deploy/app/deploy/statefulSet.yaml.j2
@@ -134,7 +134,7 @@ spec:
       storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
       resources:
         requests:
-          storage: 256M
+          storage: {{ jellyfin.container.storage.data }}
       selector:
         matchLabels:
           {{ jellyfin.labels_def | to_nice_yaml() | indent(10) }}
