--- a/ansible/install_applications/roles/tool_paperless_deploy/app/deploy/pgsql-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/tool_paperless_deploy/app/deploy/pgsql-statefulSet.yaml.j2
@@ -104,7 +104,7 @@ spec:
       storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
       resources:
         requests:
-          storage: 512M
+          storage: {{ paperless_pgsql.container.storage.data }}
       selector:
         matchLabels:
           {{ paperless_pgsql.labels_def | to_nice_yaml() | indent(10) }}
