--- a/ansible/install_applications/roles/tool_syncthing_deploy/app/deploy/discovery-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/tool_syncthing_deploy/app/deploy/discovery-statefulSet.yaml.j2
@@ -89,7 +89,7 @@ spec:
       storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
       resources:
         requests:
-          storage: 32M
+          storage: {{ syncthing_discovery.container.storage.data }}
       selector:
         matchLabels:
           {{ syncthing_discovery.labels_def | to_nice_yaml() | indent(10) }}
