--- a/ansible/install_applications/roles/tool_syncthing_deploy/app/deploy/syncthing-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/tool_syncthing_deploy/app/deploy/syncthing-statefulSet.yaml.j2
@@ -160,7 +160,7 @@ spec:
       storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
       resources:
         requests:
-          storage: 32M
+          storage: {{ syncthing.container.storage.data }}
       selector:
         matchLabels:
           {{ syncthing.labels_def | to_nice_yaml() | indent(10) }}
