Add prometheus monitoring to Longhorn

--- a/ansible/install_infra/roles/kubernetes_longhorn_deploy/templates/00-longhorn.yaml.j2
+++ b/ansible/install_infra/roles/kubernetes_longhorn_deploy/templates/00-longhorn.yaml.j2
@@ -3327,6 +3327,7 @@ metadata:
     app.kubernetes.io/instance: longhorn
     app.kubernetes.io/version: v1.3.2
     app: longhorn-manager
+    prometheus-target: longhorn-manager
   name: longhorn-backend
   namespace: longhorn-system
 spec:
