--- a/ansible/install_infra/roles/kubernetes_longhorn_deploy/templates/storage-class.yaml.j2
+++ b/ansible/install_infra/roles/kubernetes_longhorn_deploy/templates/storage-class.yaml.j2
@@ -1,7 +1,7 @@
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
-  name: longhorn-low-durability
+  name: {{ kubernetes_longhorn_low_durability_storage_class_name }}
 provisioner: driver.longhorn.io
 allowVolumeExpansion: true
 reclaimPolicy: Delete
@@ -21,7 +21,7 @@ parameters:
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
-  name: longhorn-high-durability
+  name: {{ kubernetes_longhorn_high_durability_storage_class_name }}
 provisioner: driver.longhorn.io
 allowVolumeExpansion: true
 reclaimPolicy: Delete
