--- a/ansible/install_applications/roles/monitoring_kube_state_metrics_deploy/app/deploy/clusterRole.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_kube_state_metrics_deploy/app/deploy/clusterRole.yaml.j2
@@ -77,6 +77,13 @@ rules:
   - list
   - watch
 - apiGroups:
+  - discovery.k8s.io
+  resources:
+  - endpointslices
+  verbs:
+  - list
+  - watch
+- apiGroups:
   - storage.k8s.io
   resources:
   - storageclasses
@@ -96,6 +103,7 @@ rules:
   - networking.k8s.io
   resources:
   - networkpolicies
+  - ingressclasses
   - ingresses
   verbs:
   - list
