Fix metallb to schedule on specific-worker-type taint

--- a/ansible/install_infra/roles/kubernetes_metallb_deploy/templates/1-deploy/metallb.yaml.j2
+++ b/ansible/install_infra/roles/kubernetes_metallb_deploy/templates/1-deploy/metallb.yaml.j2
@@ -1732,6 +1732,9 @@ spec:
       - effect: NoSchedule
         key: node-role.kubernetes.io/control-plane
         operator: Exists
+      - key: "specific-worker-type"
+        operator: Exists
+        effect: NoSchedule
 ---
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
