Fix longhorn to schedule on specific-worker-type taint

--- a/ansible/install_infra/roles/kubernetes_longhorn_deploy/templates/00-longhorn.yaml.j2
+++ b/ansible/install_infra/roles/kubernetes_longhorn_deploy/templates/00-longhorn.yaml.j2
@@ -3528,6 +3528,10 @@ spec:
           secretName: longhorn-grpc-tls
           optional: true
       serviceAccountName: longhorn-service-account
+      tolerations:
+      - key: "specific-worker-type"
+        operator: Exists
+        effect: NoSchedule
   updateStrategy:
     rollingUpdate:
       maxUnavailable: "100%"
