Fix fluentbit to schedule on specific-worker-type taint

--- a/ansible/install_applications/roles/logging_fluentbit_deploy/app/deploy/daemonSet.yaml.j2
+++ b/ansible/install_applications/roles/logging_fluentbit_deploy/app/deploy/daemonSet.yaml.j2
@@ -99,3 +99,6 @@ spec:
       - key: node-role.kubernetes.io/master
         operator: Exists
         effect: NoSchedule
+      - key: "specific-worker-type"
+        operator: Exists
+        effect: NoSchedule
