Fix roomassistant to schedule on specific-worker-type=home-only taint

--- a/ansible/install_applications/roles/home_roomassistant_deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/home_roomassistant_deploy/app/deploy/deployment.yaml.j2
@@ -72,3 +72,8 @@ spec:
       - name: docker-config
       nodeSelector:
         capability/home: 'yes'
+      tolerations:
+      - key: "specific-worker-type"
+        operator: "Equal"
+        value: "home-only"
+        effect: "NoSchedule"
