--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -713,7 +713,7 @@ watchers:
     image: {{ miniflux.base_image.name }}
     tag: {{ miniflux.base_image.tag }}
     includes:
-      - ^[0-9]+.[0-9]+.[0-9]+$
+      - ^[0-9]+.[0-9]+.[0-9]+-distroless$
     excludes:
       - ^1\..*
       - ^2.0.[0-9]$
@@ -739,7 +739,7 @@ watchers:
     excludes:
       - .*-alpine3.1[0-6]
       - 1[0-8]\..*
-      - 19\.[0-2]\..*
+      - 19\.[0-5]\..*
   - name: "Reminiflux Nginx"
     type: docker_registry
     repo: {{ miniflux_reminiflux.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
