--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/operator/clusterRole.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/operator/clusterRole.yaml.j2
@@ -11,6 +11,7 @@ rules:
   resources:
   - alertmanagers
   - alertmanagers/finalizers
+  - alertmanagers/status
   - alertmanagerconfigs
   - prometheuses
   - prometheuses/finalizers
