--- a/ansible/install_applications/roles/monitoring_grafana_deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_grafana_deploy/app/deploy/statefulSet.yaml.j2
@@ -96,7 +96,7 @@ spec:
           name: tmp-plugins
           readOnly: false
       nodeSelector:
-        beta.kubernetes.io/os: linux
+        kubernetes.io/os: linux
         capability/general-purpose: 'yes'
       serviceAccountName: grafana
       volumes:
