Add kubernetes and longhorn widgets

--- a/ansible/install_applications/roles/tool_homepage_deploy/app/config/settings.yaml.j2
+++ b/ansible/install_applications/roles/tool_homepage_deploy/app/config/settings.yaml.j2
@@ -26,3 +26,7 @@ layout:
     icon: mdi-download
   Stream:
     icon: mdi-stream
+
+providers:
+  longhorn:
+    url: http://longhorn-frontend.longhorn-system.svc.cluster.local
